add: better pricing model support
